<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>
    <item
        android:id="@+id/action_add_friends"
        android:icon="@drawable/person_add"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:title="@string/add_friends"/>
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/my_profile"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/share_with_friends"/>

</menu>