<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/app_name_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textColor="@color/orange_800"
        android:textSize="60sp" />

    <EditText
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name_heading"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_card"
        android:drawablePadding="6dp"
        android:drawableStart="@drawable/ic_action_person"
        android:hint="@string/enter_username"
        android:padding="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_field"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_card"
        android:drawablePadding="6dp"
        android:drawableStart="@drawable/ic_action_secure"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_field"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/orange_800"
        android:text="@string/signin"
        android:textColor="@color/white" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="10dp"
        android:id="@+id/divider"
        android:layout_below="@id/signin_button"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="#e5e5e5"
         />
    
    <TextView 
        android:id="@+id/footer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notregistered"
        android:layout_below="@id/divider"
        android:layout_marginTop="20dp"
        android:textColor="@color/orange_800"
        android:layout_centerHorizontal="true"
        />
    
    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/footer_text"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/orange_800"
        android:text="@string/register"
        android:textColor="@color/white" />
    
</RelativeLayout>